Add PostgreSQL support by default and bump rails version to 2.3.10

--- a/config/database.postgresql.yml
+++ b/config/database.postgresql.yml
@@ -5,6 +5,7 @@ common: &shared
   port: 5433
   username: lsmith
   password:
+  min_messages: warning
 
 development:
   database: ticket_mule_development
