--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,12 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore bundler config.
 /.bundle
-
-# Ignore the default SQLite database.
+/config/database.yml
 /db/*.sqlite3
 /db/*.sqlite3-journal
-
-# Ignore all logfiles and tempfiles.
+/coverage
 /log/*.log
+/public/assets
 /tmp
+/vendor/bundle
